simple/simple-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: echo 
  labels:
    app: echo 
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo 
  template: # template以下はPodリソースにおけるspec定義と同じ
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx 
        image: nginx:latest 
        ports:
        - containerPort: 80 
      - name: echo
        image: hashicorp/http-echo:latest
        ports:
        - containerPort: 8080
