simple/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-echo
spec:
  containers:
  - name: nginx 
    image: nginx:latest 
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
    command:
            - sh
            - -c
            - while true; do echo $(hostname):a; sleep 10; done
  - name: echo
    image: hashicorp/http-echo:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    command:
            - sh
            - -c
            - while true; do echo $(hostname):a; sleep 10; done
